--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "silverstripe/framework": "^4.0",
         "halaxa/json-machine": "^0.3.2",
-        "guzzlehttp/guzzle": "^6"
+        "guzzlehttp/guzzle": "^6",
+        "phpseclib/phpseclib": "~2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
