--- a/_config/config.yml
+++ b/_config/config.yml
@@ -14,6 +14,7 @@ Dynamic\Salsify\Model\Mapper:
     - Dynamic\Salsify\TypeHandler\Relation\HasOneHandler
     - Dynamic\Salsify\TypeHandler\Relation\ManyHandler
     - Dynamic\Salsify\TypeHandler\Relation\SalsifyRelationHandler
+    - Dynamic\Salsify\ORM\FileCleanupExtension
 
 SilverStripe\Assets\File:
   extensions:
